# Data-Structure-and-Algorithms

./: .gitignore  1054. Distant Barcodes.md  11-Container With Most Water.md  1137-N-th Tribonacci Number.md  12-Integer to Roman.md  1218-Longest Arithmetic Subsequence of Given Difference.md  146. LRU Cache.md  1864. Minimum Number of Swaps to Make the Binary String Alternating.md  1865. Finding Pairs With a Certain Sum.md  3-lengthOfLongestSubstring.md  303-Range Sum Query - Immutable.md  39. Combination Sum.md  435. Non-overlapping Intervals.md  455. Assign Cookies.md  5-LongestPalindromicSubstring.md  547. Number of Provinces.md  5777. Reduction Operations to Make the Array Elements Equal.md  5778. Minimum Number of Flips to Make the Binary String Alternating.md  881. Boats to Save People.md  932. Beautiful Array.md  Algorithm Design Techniques.md  Amazon.md  CMakeLists.txt  Disjoint Sets.md  Pruning.md  README.md  Useful Code.md  auto.sh  lazygit.sh  main.cpp  methods.h  techniques.md  常看常新题.md
.obsidian/: workspace
1 Array Stack Queue/: 0 Array Stack Queue.md  1381. Design a Stack With Increment Operation.md  1438. Longest Continuous Subarray With Absolute Diff Less Than or Equal to Limit.md  1488. Avoid Flood in The City.md  155. Min-Stack.md  160. Intersection of Two Linked Lists.cpp  1664. Ways to Make a Fair Array.md  169. Majority Element.md  1711CountGoodMeal.cpp  1887. Reduction Operations to Make the Array Elements Equal.md  1899 Merge Triplets to Form Target Triplet.md  1913. Maximum Product Difference Between Two Pairs.md  20..md  (+30 more)
Play ground/: CMakeLists.txt  main.cpp
Play ground/divide_and_conquer/: 169MajorityElement.cpp  912SortAnArray.cpp  CMakeLists.txt  closest_points.cpp  divide_and_conquer.h
Play ground/dp/: 120Triangle.cpp  121BestTimetoBuyandSellStock.cpp  1277CountSquareSubmatriceswithAllOnes.cpp  174DungeonGame.cpp  304RangeSumQuery2D-Immutable.cpp  42. Trapping Rain Water.cpp  62UniquePaths.cpp  houseRobber.cpp  longestIncrSubseq.cpp  wordBreak.cpp
Play ground/sorting/: 215. Kth Largest Element in an Array.cpp  sorting.h
dp/: 1210MinimumMoves2ReachTargetwithRotations.cpp  174DungeonGame.cpp  1866. Number of Ways to Rearrange Sticks With K Sticks Visible.md  198. House Robber.md  221MaximalSquare.cpp  322. Coin Change.md  416. Partition Equal Subset Sum.md  464. Can I Win.md  494. Target Sum.md  518. Coin Change 2.md  53Maximum-Subarray.cpp  62. Unique Paths.md  63UniquePaths2.cpp  64MinPathSum.cpp  746. Min Cost Climbing Stairs.md  85MaximalRectangle.cpp  877. Stone Game.md  931MinimumFallingPathSum.cpp  CMakeLists.txt  Dynamic Programming.md  Knapsack Problem.md  dp.h  houseRobber.cpp  longestIncrSubseq.cpp  perfectSquares.cpp  wordBreak.cpp
(+313 files in other folders)
